--- a/src/renderer/pages/Index/components/MyList/index.module.less
+++ b/src/renderer/pages/Index/components/MyList/index.module.less
@@ -1,18 +1,28 @@
 .container {
   padding: 5px;
+
+  .header {
+    border: 1px solid #f00;
+    overflow: hidden;
+    padding: 2px;
+  }
+
   .listItem {
     padding: 5px 0 0;
   }
+
   .timeLine {
     text-align: right;
     width: 70px;
     height: 80px;
+
     .left {
       display: inline-block;
       width: 27px;
       font-size: 20px;
       vertical-align: top;
     }
+
     .right {
       text-align: left;
       display: inline-block;
@@ -21,14 +31,17 @@
       vertical-align: top;
     }
   }
+
   .liner {
     margin: 0 5px;
+
     .circle {
       width: 5px;
       height: 5px;
       border: 1px solid #1677ff;
       border-radius: 5px;
     }
+
     .line {
       width: 1px;
       height: 80px;
@@ -36,16 +49,20 @@
       margin-left: 3px;
     }
   }
+
   .content {
     border: 1px solid #f00;
     width: 100%;
+
     .text {
       // border: 1px solid #f00;
     }
+
     .img {
       // border: 1px solid #f00;
       margin-top: 5px;
     }
+
     .bottom {
       .time {
         font-size: 10px;
