feat: 新增后刷新列表

--- a/src/renderer/pages/Index/components/MyList/index.module.less
+++ b/src/renderer/pages/Index/components/MyList/index.module.less
@@ -13,13 +13,15 @@
 
   .timeLine {
     text-align: right;
-    width: 70px;
+    width: 75px;
     height: 80px;
 
     .left {
       display: inline-block;
       width: 27px;
       font-size: 20px;
+      margin-top: -5px;
+      margin-right: 2px;
       vertical-align: top;
     }
 
