--- a/src/renderer/pages/Index/components/MyList/index.module.less
+++ b/src/renderer/pages/Index/components/MyList/index.module.less
@@ -15,6 +15,7 @@
     text-align: right;
     width: 75px;
     height: 80px;
+    min-width: 60px;
 
     .left {
       display: inline-block;
@@ -70,5 +71,9 @@
         font-size: 10px;
       }
     }
+  }
+
+  .activedContent {
+    background-color: #090;
   }
 }
