--- a/src/renderer/pages/Index/components/MyList/index.module.less
+++ b/src/renderer/pages/Index/components/MyList/index.module.less
@@ -5,6 +5,9 @@
     border: 1px solid #f00;
     overflow: hidden;
     padding: 2px;
+    height: 20px;
+    line-height: 20px;
+    vertical-align: middle;
   }
 
   .listItem {
