--- a/src/renderer/pages/Index/components/MyList/index.module.less
+++ b/src/renderer/pages/Index/components/MyList/index.module.less
@@ -59,6 +59,9 @@
   .content {
     border: 1px solid #f00;
     width: 100%;
+    min-height: 70px;
+    border-radius: 5px;
+    cursor: pointer;
 
     .text {
       // border: 1px solid #f00;
@@ -77,6 +80,6 @@
   }
 
   .activedContent {
-    background-color: #090;
+    background-color: #8aabcc;
   }
 }
