--- a/src/renderer/pages/Header/index.module.less
+++ b/src/renderer/pages/Header/index.module.less
@@ -1,16 +1,8 @@
 .container {
   border: 1px solid #f00;
-  .icons {
-    .icon {
-      border-radius: 100%;
-      padding: 2px;
-      margin: 2px;
-      color: rgba(255, 255, 255, 0);
-      font-size: 10px;
-      cursor: pointer;
-      &:hover {
-        color: rgba(0, 0, 0, 0.7);
-      }
-    }
+  padding-left: 5px;
+  .setup {
+    display: inline-block;
+    cursor: pointer;
   }
 }
